--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
             <div class="main">
                 <div class="search-box">
                     <input type="text" placeholder="Enter City Name">
-                    <button><img src="./weather-app-img/images/search.png"></button>
+                    <button><img src="./search.png"></button>
                 </div>
                 <div class="error">
                     <p>Invalid City Name</p>
                 </div>
                 <div class="content">
                     <div class="weather">
-                        <img src="./weather-app-img/images/rain.png" class="weather-icon">
+                        <img src="./rain.png" class="weather-icon">
                         <h1 class="temp">22°C</h1>
                         <h2 class="City">Chennai</h2>
                     </div>
                     <div class="details">
                         <div class="humidity">
                             <div class="hum-img">
-                                <img src="./weather-app-img/images/humidity.png" class="humidity-icon">
+                                <img src="./humidity.png" class="humidity-icon">
                             </div>
                             <div class="hum-details">
                                 <p class="humidity-number">50%</p>
@@ -44,7 +44,7 @@
                         </div>
                         <div class="windspeed">
                             <div class="wind-img">
-                                <img src="./weather-app-img/images/wind.png" class="wind-icon">
+                                <img src="./wind.png" class="wind-icon">
                             </div>
                             <div class="wid-details">
                                 <p class="windspeed-number">15 km/hr</p>
